# origin

./: .gitignore
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/AnimStarterPack/: Aim_Space_Hip.uasset  Aim_Space_Ironsights.uasset  BS_CrouchWalk.uasset  BS_Jog.uasset  Crouch_Idle_Rifle_Hip.uasset  Crouch_Idle_Rifle_Ironsights.uasset  Crouch_Walk_Bwd_Rifle_Hip.uasset  Crouch_Walk_Bwd_Rifle_Ironsights.uasset  Crouch_Walk_Fwd_Rifle_Hip.uasset  Crouch_Walk_Fwd_Rifle_Ironsights.uasset  Crouch_Walk_Lt_Rifle_Hip.uasset  Crouch_Walk_Lt_Rifle_Ironsights.uasset  Crouch_Walk_Rt_Rifle_Hip.uasset  Crouch_Walk_Rt_Rifle_Ironsights.uasset  Crouch_to_Stand_Rifle_Hip.uasset  Crouch_to_Stand_Rifle_Ironsights.uasset  Death_1.uasset  Death_2.uasset  Death_3.uasset  Death_Ironsights_1.uasset  Death_Ironsights_2.uasset  Equip_Pistol_Standing.uasset  Equip_Rifle_Standing.uasset  Fire_Rifle_Hip.uasset  Fire_Rifle_Ironsights.uasset  Fire_Shotgun_Hip.uasset  Fire_Shotgun_Ironsights.uasset  Hit_React_1.uasset  Hit_React_2.uasset  Hit_React_3.uasset  Hit_React_4.uasset  Idle_Pistol.uasset  Idle_Rifle_Hip.uasset  Idle_Rifle_Hip_Break1.uasset  Idle_Rifle_Hip_Break2.uasset  Idle_Rifle_Ironsights.uasset  Jog_Bwd_Rifle.uasset  Jog_Fwd_Rifle.uasset  Jog_Lt_Rifle.uasset  Jog_Rt_Rifle.uasset  (+27 more)
MAP/course_project/: course_project.cpp  course_project.sln  course_project.vcxproj
Qt/homework_10/: CMakeLists.txt  main.cpp  (+4 more)
advanced_programming/homeworks_4/homework_4_1/: CMakeLists.txt  list.cpp  list.h  list_node.h  main.cpp  test-main.cpp
advanced_programming/homeworks_4/homework_4_2/: CMakeLists.txt  list.cpp  list.h  list_node.h  main.cpp  test-main.cpp
basic_programming/homeworks_10/homework_10_2/: CMakeLists.txt  figure.h  homework_6_3.cpp  homework_6_3.sln  homework_6_3.vcxproj.filters  quadrangle.h  rectangle.cpp  rectangle.h  rhombus.h  right_triangle.cpp
basic_programming/homeworks_11/homework_11_3/: CMakeLists.txt  homework_11_3.cpp  leaving_dynamic_library.h
course_project/: course_project.sln
homework_1/: homework_IDE.cpp
sqlcpp/homework_5/: CMakeLists.txt  homework_5.cpp
(+1004 files in other folders)
