cmake_minimum_required(VERSION 3.22.0)
project(homework_6_3)
add_executable(homework_10_2 homework_6_3.cpp figure.h figure.cpp triangle.h triangle.cpp right_triangle.h right_triangle.cpp equilateral_triangle.h equilateral_triangle.cpp isosceles_triangle.h isosceles_triangle.cpp quadrangle.h quadrangle.cpp rectangle.h rectangle.cpp parallelogram.h parallelogram.cpp rhombus.h rhombus.cpp square.h square.cpp) 
